--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,25 +1,7 @@
 stages:
-  download-test-dataset:
-    cmd: uv run kaggle competitions download -c higgs-boson --path data/zip/ 
-      --file test.zip
+  download-dataset:
+    cmd: uv run python -c "import urllib.request; 
+      urllib.request.urlretrieve('https://opendata.cern.ch/record/328/files/atlas-higgs-challenge-2014-v2.csv.gz',
+      'data/raw/higgs-challenge.csv.gz')"
     outs:
-    - data/zip/test.zip
-  download-training-dataset:
-    cmd: uv run kaggle competitions download -c higgs-boson --path data/zip/ 
-      --file training.zip
-    outs:
-    - data/zip/training.zip
-  unzip-training-dataset:
-    cmd: uv run python -c "import shutil; 
-      shutil.unpack_archive('data/zip/training.zip', 'data/raw/')"
-    deps:
-    - data/zip/training.zip
-    outs:
-    - data/raw/training.csv
-  unzip-test-dataset:
-    cmd: uv run python -c "import shutil; 
-      shutil.unpack_archive('data/zip/test.zip', 'data/raw/')"
-    deps:
-    - data/zip/training.zip
-    outs:
-    - data/raw/test.csv
+    - data/raw/higgs-challenge.csv.gz
