--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "arviz>=0.22.0",
     "dvc>=3.63.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "pymc>=5.26.1",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
 ]
