--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dvc>=3.63.0",
     "ipywidgets>=8.1.8",
     "matplotlib>=3.10.7",
+    "nbconvert>=7.16.6",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "pymc>=5.26.1",
