--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,8 @@ dependencies = [
     "pymc>=5.26.1",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
+    "ipykernel>=7.1.0",
 ]
 
 [dependency-groups]
-dev = [
-    "ipykernel>=7.1.0",
-]
+dev = []
